--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,13 @@
 version: '2.4'
 
 services:
-
   node_app:
     build:
       context: .
       args:
         - NODE_ENV=development
-        - DATABASE_URL=postgresql://postgres:postgres@db:5432/mocha_chai_tv_shows
-        - DATABASE_URL_TEST=postgresql://postgres:postgres@db:5432/mocha_chai_tv_shows_test
+        - DATABASE_URL=postgresql://postgres:postgres@db:5432/addresses
+        - DATABASE_URL_TEST=postgresql://postgres:postgres@db:5432/addresses_test
     # you can use legacy debug config or new inspect
     # NOTE: if nodemon isn't restarting on changes, you might be on Windows
     # which has trouble seeing file changes, so add -L to use legacy polling
@@ -16,9 +15,9 @@ services:
     #command: ../node_modules/.bin/nodemon --debug=0.0.0.0:5858
     command: ../node_modules/.bin/nodemon --inspect=0.0.0.0:9229 ./bin/www
     ports:
-      - "80:3000"
-      - "9229:9229"
-      - "9230:9230"
+      - '80:3000'
+      - '9229:9229'
+      - '9230:9230'
     volumes:
       - ./node_app:/opt/node_app/app:delegated
       # bind-mounting these two files in will let you add packages during development without rebuilding
@@ -44,13 +43,15 @@ services:
     build:
       context: ./node_app/db
       dockerfile: Dockerfile
+    ports:
+      - '5433:5432'
     expose:
       - 5432
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ['CMD-SHELL', 'pg_isready -U postgres']
       interval: 10s
       start_period: 10s
       timeout: 4s
